--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=kltn
 
 server.port=8080
-server.servlet.context-path=/api
 server.servlet.session.timeout=30m
 
 spring.datasource.url=jdbc:mysql://localhost:3306/kltn?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&characterEncoding=UTF-8
@@ -28,8 +27,8 @@ spring.jpa.properties.hibernate.order_updates=true
 # Mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@gmail.com
-spring.mail.password=your-app-password
+spring.mail.username=tranductam274@gmail.com
+spring.mail.password=your-email-password
 
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
